fix:Placeholder is changed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
         <div class="card">
             <div class="search">
-                <input type="text" placeholder="Enter City Name"
+                <input type="text" placeholder="@sankeerthankj"
                 spellcheck="false">
                 <button><img src="images/search.png"></button>
             </div>
